/*
 *                    GNU LESSER GENERAL PUBLIC LICENSE
 *                        Version 3, 29 June 2007
 *
 *  Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org/>
 *  Everyone is permitted to copy and distribute verbatim copies
 *  of this license document, but changing it is not allowed.
 *
 *
 *   This version of the GNU Lesser General Public License incorporates
 * the terms and conditions of version 3 of the GNU General Public
 * License, supplemented by the additional permissions listed below.
 *
 *   0. Additional Definitions.
 *
 *   As used herein, "this License" refers to version 3 of the GNU Lesser
 * General Public License, and the "GNU GPL" refers to version 3 of the GNU
 * General Public License.
 *
 *   "The Library" refers to a covered work governed by this License,
 * other than an Application or a Combined Work as defined below.
 *
 *   An "Application" is any work that makes use of an interface provided
 * by the Library, but which is not otherwise based on the Library.
 * Defining a subclass of a class defined by the Library is deemed a mode
 * of using an interface provided by the Library.
 *
 *   A "Combined Work" is a work produced by combining or linking an
 * Application with the Library.  The particular version of the Library
 * with which the Combined Work was made is also called the "Linked
 * Version".
 *
 *   The "Minimal Corresponding Source" for a Combined Work means the
 * Corresponding Source for the Combined Work, excluding any source code
 * for portions of the Combined Work that, considered in isolation, are
 * based on the Application, and not on the Linked Version.
 *
 *   The "Corresponding Application Code" for a Combined Work means the
 * object code and/or source code for the Application, including any data
 * and utility programs needed for reproducing the Combined Work from the
 * Application, but excluding the System Libraries of the Combined Work.
 *
 *   1. Exception to Section 3 of the GNU GPL.
 *
 *   You may convey a covered work under sections 3 and 4 of this License
 * without being bound by section 3 of the GNU GPL.
 *
 *   2. Conveying Modified Versions.
 *
 *   If you modify a copy of the Library, and, in your modifications, a
 * facility refers to a function or data to be supplied by an Application
 * that uses the facility (other than as an argument passed when the
 * facility is invoked), then you may convey a copy of the modified
 * version:
 *
 *    a) under this License, provided that you make a good faith effort to
 *    ensure that, in the event an Application does not supply the
 *    function or data, the facility still operates, and performs
 *    whatever part of its purpose remains meaningful, or
 *
 *    b) under the GNU GPL, with none of the additional permissions of
 *    this License applicable to that copy.
 *
 *   3. Object Code Incorporating Material from Library Header Files.
 *
 *   The object code form of an Application may incorporate material from
 * a header file that is part of the Library.  You may convey such object
 * code under terms of your choice, provided that, if the incorporated
 * material is not limited to numerical parameters, data structure
 * layouts and accessors, or small macros, inline functions and templates
 * (ten or fewer lines in length), you do both of the following:
 *
 *    a) Give prominent notice with each copy of the object code that the
 *    Library is used in it and that the Library and its use are
 *    covered by this License.
 *
 *    b) Accompany the object code with a copy of the GNU GPL and this license
 *    document.
 *
 *   4. Combined Works.
 *
 *   You may convey a Combined Work under terms of your choice that,
 * taken together, effectively do not restrict modification of the
 * portions of the Library contained in the Combined Work and reverse
 * engineering for debugging such modifications, if you also do each of
 * the following:
 *
 *    a) Give prominent notice with each copy of the Combined Work that
 *    the Library is used in it and that the Library and its use are
 *    covered by this License.
 *
 *    b) Accompany the Combined Work with a copy of the GNU GPL and this license
 *    document.
 *
 *    c) For a Combined Work that displays copyright notices during
 *    execution, include the copyright notice for the Library among
 *    these notices, as well as a reference directing the user to the
 *    copies of the GNU GPL and this license document.
 *
 *    d) Do one of the following:
 *
 *        0) Convey the Minimal Corresponding Source under the terms of this
 *        License, and the Corresponding Application Code in a form
 *        suitable for, and under terms that permit, the user to
 *        recombine or relink the Application with a modified version of
 *        the Linked Version to produce a modified Combined Work, in the
 *        manner specified by section 6 of the GNU GPL for conveying
 *        Corresponding Source.
 *
 *        1) Use a suitable shared library mechanism for linking with the
 *        Library.  A suitable mechanism is one that (a) uses at run time
 *        a copy of the Library already present on the user's computer
 *        system, and (b) will operate properly with a modified version
 *        of the Library that is interface-compatible with the Linked
 *        Version.
 *
 *    e) Provide Installation Information, but only if you would otherwise
 *    be required to provide such information under section 6 of the
 *    GNU GPL, and only to the extent that such information is
 *    necessary to install and execute a modified version of the
 *    Combined Work produced by recombining or relinking the
 *    Application with a modified version of the Linked Version. (If
 *    you use option 4d0, the Installation Information must accompany
 *    the Minimal Corresponding Source and Corresponding Application
 *    Code. If you use option 4d1, you must provide the Installation
 *    Information in the manner specified by section 6 of the GNU GPL
 *    for conveying Corresponding Source.)
 *
 *   5. Combined Libraries.
 *
 *   You may place library facilities that are a work based on the
 * Library side by side in a single library together with other library
 * facilities that are not Applications and are not covered by this
 * License, and convey such a combined library under terms of your
 * choice, if you do both of the following:
 *
 *    a) Accompany the combined library with a copy of the same work based
 *    on the Library, uncombined with any other library facilities,
 *    conveyed under the terms of this License.
 *
 *    b) Give prominent notice with the combined library that part of it
 *    is a work based on the Library, and explaining where to find the
 *    accompanying uncombined form of the same work.
 *
 *   6. Revised Versions of the GNU Lesser General Public License.
 *
 *   The Free Software Foundation may publish revised and/or new versions
 * of the GNU Lesser General Public License from time to time. Such new
 * versions will be similar in spirit to the present version, but may
 * differ in detail to address new problems or concerns.
 *
 *   Each version is given a distinguishing version number. If the
 * Library as you received it specifies that a certain numbered version
 * of the GNU Lesser General Public License "or any later version"
 * applies to it, you have the option of following the terms and
 * conditions either of that published version or of any later version
 * published by the Free Software Foundation. If the Library as you
 * received it does not specify a version number of the GNU Lesser
 * General Public License, you may choose any version of the GNU Lesser
 * General Public License ever published by the Free Software Foundation.
 *
 *   If the Library as you received it specifies that a proxy can decide
 * whether future versions of the GNU Lesser General Public License shall
 * apply, that proxy's public statement of acceptance of any version is
 * permanent authorization for you to choose that version for the
 * Library.
 */
package com.github.szgabsz91.morpher.systems.impl.impl;

import com.github.szgabsz91.morpher.core.model.AffixType;
import com.github.szgabsz91.morpher.core.io.ICustomDeserializer;
import com.github.szgabsz91.morpher.core.io.ICustomSerializer;
import com.github.szgabsz91.morpher.core.io.Serializer;
import com.github.szgabsz91.morpher.core.model.Corpus;
import com.github.szgabsz91.morpher.engines.api.IMorpherEngine;
import com.github.szgabsz91.morpher.engines.api.model.AnalysisInput;
import com.github.szgabsz91.morpher.engines.api.model.InflectionInput;
import com.github.szgabsz91.morpher.engines.api.model.InflectionOrderedInput;
import com.github.szgabsz91.morpher.engines.api.model.MorpherEngineResponse;
import com.github.szgabsz91.morpher.engines.api.model.PreanalyzedTrainingItems;
import com.github.szgabsz91.morpher.languagehandlers.api.model.LemmaMap;
import com.github.szgabsz91.morpher.systems.api.IMorpherSystem;
import com.github.szgabsz91.morpher.systems.api.model.Language;
import com.github.szgabsz91.morpher.systems.api.model.LanguageAwareAnalysisInput;
import com.github.szgabsz91.morpher.systems.api.model.LanguageAwareCorpus;
import com.github.szgabsz91.morpher.systems.api.model.LanguageAwareInflectionInput;
import com.github.szgabsz91.morpher.systems.api.model.LanguageAwareInflectionOrderedInput;
import com.github.szgabsz91.morpher.systems.api.model.LanguageAwareLemmaMap;
import com.github.szgabsz91.morpher.systems.api.model.LanguageAwarePreanalyzedTrainingItems;
import com.github.szgabsz91.morpher.systems.api.model.MorpherSystemResponse;
import com.github.szgabsz91.morpher.systems.impl.converters.MorpherSystemConverter;
import com.github.szgabsz91.morpher.systems.impl.protocolbuffers.MorpherSystemMessage;
import com.google.protobuf.InvalidProtocolBufferException;
import lombok.Getter;
import lombok.RequiredArgsConstructor;

import java.io.IOException;
import java.nio.file.Files;
import java.nio.file.Path;
import java.nio.file.Paths;
import java.util.List;
import java.util.Map;
import java.util.Set;

import static java.util.stream.Collectors.toList;

/**
 * Default {@link IMorpherSystem} implementation.
 *
 * @author szgabsz91
 */
@RequiredArgsConstructor
@Getter
public class MorpherSystem implements IMorpherSystem {

    private final Map<Language, IMorpherEngine<?>> morpherEngineMap;

    /**
     * Closes the underlying Morpher Engines.
     */
    @Override
    public void close() {
        this.morpherEngineMap.values().forEach(IMorpherEngine::close);
    }

    /**
     * Has the appropriate Morpher Engine learn the given corpus.
     * @param languageAwareCorpus the {@link LanguageAwareCorpus} instance
     */
    @Override
    public void learn(final LanguageAwareCorpus languageAwareCorpus) {
        final Language language = languageAwareCorpus.getLanguage();
        final IMorpherEngine<?> morpherEngine = getMorpherEngine(language);
        final Corpus corpus = languageAwareCorpus.getContent();
        morpherEngine.learn(corpus);
    }

    /**
     * Has the appropriate Morpher Engine learn the given preanalyzed training items.
     * @param languageAwarePreanalyzedTrainingItems the {@link LanguageAwarePreanalyzedTrainingItems} instance
     */
    @Override
    public void learn(final LanguageAwarePreanalyzedTrainingItems languageAwarePreanalyzedTrainingItems) {
        final Language language = languageAwarePreanalyzedTrainingItems.getLanguage();
        final IMorpherEngine<?> morpherEngine = getMorpherEngine(language);
        final PreanalyzedTrainingItems preanalyzedTrainingItems = languageAwarePreanalyzedTrainingItems.getContent();
        morpherEngine.learn(preanalyzedTrainingItems);
    }

    /**
     * Has the appropriate Morpher Engine learn the given lemma map.
     * @param languageAwareLemmaMap the {@link LanguageAwareLemmaMap}
     */
    @Override
    public void learn(final LanguageAwareLemmaMap languageAwareLemmaMap) {
        final Language language = languageAwareLemmaMap.getLanguage();
        final IMorpherEngine<?> morpherEngine = getMorpherEngine(language);
        final LemmaMap lemmaMap = languageAwareLemmaMap.getContent();
        morpherEngine.learn(lemmaMap);
    }

    /**
     * Performs inflection using the given {@link LanguageAwareInflectionInput} that contains the {@link Language},
     * the input word and the unordered set of affix types.
     *
     * @param languageAwareInflectionInput the {@link LanguageAwareInflectionInput} instance
     * @return the {@link MorpherSystemResponse} instance
     */
    @Override
    public MorpherSystemResponse inflect(final LanguageAwareInflectionInput languageAwareInflectionInput) {
        final Language language = languageAwareInflectionInput.getLanguage();
        final IMorpherEngine<?> morpherEngine = getMorpherEngine(language);
        final InflectionInput inflectionInput = languageAwareInflectionInput.getContent();
        final List<MorpherEngineResponse> morpherEngineResponses = morpherEngine.inflect(inflectionInput);
        return new MorpherSystemResponse(language, morpherEngineResponses);
    }

    /**
     * Performs inflection using the given {@link LanguageAwareInflectionOrderedInput} that contains
     * the {@link Language}, the input word and the ordered list of affix types.
     *
     * @param languageAwareInflectionOrderedInput the {@link LanguageAwareInflectionOrderedInput}
     * @return the {@link MorpherSystemResponse} instance
     */
    @Override
    public MorpherSystemResponse inflect(
            final LanguageAwareInflectionOrderedInput languageAwareInflectionOrderedInput) {
        final Language language = languageAwareInflectionOrderedInput.getLanguage();
        final IMorpherEngine<?> morpherEngine = getMorpherEngine(language);
        final InflectionOrderedInput inflectionOrderedInput = languageAwareInflectionOrderedInput.getContent();
        final List<MorpherEngineResponse> morpherEngineResponses = morpherEngine.inflect(inflectionOrderedInput);
        return new MorpherSystemResponse(language, morpherEngineResponses);
    }

    /**
     * Performs morphological analysis using the given {@link LanguageAwareAnalysisInput} that contains the
     * {@link Language} and the inflected form of the word.
     *
     * @param languageAwareAnalysisInput the {@link LanguageAwareAnalysisInput} instance
     * @return the {@link MorpherSystemResponse} instance
     */
    @Override
    public MorpherSystemResponse analyze(final LanguageAwareAnalysisInput languageAwareAnalysisInput) {
        final Language language = languageAwareAnalysisInput.getLanguage();
        final IMorpherEngine<?> morpherEngine = getMorpherEngine(language);
        final AnalysisInput analysisInput = languageAwareAnalysisInput.getContent();
        final List<MorpherEngineResponse> morpherEngineResponses = morpherEngine.analyze(analysisInput);
        return new MorpherSystemResponse(language, morpherEngineResponses);
    }

    /**
     * Returns the set of supported {@link Language}s.
     * @return the set of supported {@link Language}s
     */
    @Override
    public Set<Language> getSupportedLanguages() {
        return this.morpherEngineMap.keySet();
    }

    /**
     * Returns the list of supported affix types of the given {@link Language}.
     * @param language the {@link Language}
     * @return the list of supported affix types of the given {@link Language}
     */
    @Override
    public List<AffixType> getSupportedAffixTypes(final Language language) {
        final IMorpherEngine<?> morpherEngine = getMorpherEngine(language);
        return morpherEngine.getSupportedAffixTypes();
    }

    /**
     * Returns if this Morpher Sytem is dirty, i.e. it has at least one dirty Morpher Engine.
     * @return true if this system is dirty, false otherwise
     */
    @Override
    public boolean isDirty() {
        return this.morpherEngineMap.values()
                .stream()
                .anyMatch(IMorpherEngine::isDirty);
    }

    /**
     * Saves the state of the system to the given file.
     * @param file the file to save the state to
     * @throws IOException if the state cannot be saved
     */
    @Override
    public void saveTo(final Path file) throws IOException {
        final MorpherSystemConverter morpherSystemConverter = new MorpherSystemConverter();
        final Serializer<MorpherSystem, MorpherSystemMessage> serializer =
                new Serializer<>(morpherSystemConverter, this);
        serializer.serialize(this, file);
        this.morpherEngineMap.values().forEach(IMorpherEngine::clean);
    }

    /**
     * Loads the state of the system from the given file.
     * @param file the file to load the state from
     * @throws IOException if the state cannot be loaded
     */
    @Override
    public void loadFrom(final Path file) throws IOException {
        this.close();

        final MorpherSystemConverter morpherSystemConverter = new MorpherSystemConverter();
        final MorpherSystemMessage morpherSystemMessage = morpherSystemConverter.parse(file);

        morpherSystemMessage.getEngineMapMap().forEach((languageCode, message) -> {
            final Language language = Language.of(languageCode);
            final IMorpherEngine<?> morpherEngine = getMorpherEngine(language);

            try {
                morpherEngine.fromMessage(message);
            }
            catch (final InvalidProtocolBufferException e) {
                throw new IllegalStateException(
                        "Cannot load Morpher Engine for language " + language + " from " + message,
                        e
                );
            }
        });
    }

    /**
     * Serializes the state of this {@link MorpherSystem} to the given file.
     *
     * <p>If the method returns false, {@link Serializer} will try to serialize the object with its own logic.</p>
     *
     * {@inheritDoc}
     */
    @Override
    public boolean serialize(final Path file) {
        Path tempFolder = null;

        try {
            tempFolder = Files.createTempDirectory("morpher-system");

            for (final Map.Entry<Language, IMorpherEngine<?>> entry : this.morpherEngineMap.entrySet()) {
                final Language language = entry.getKey();
                final IMorpherEngine<?> morpherEngine = entry.getValue();

                if (morpherEngine instanceof ICustomSerializer serializableMorpherEngine) {
                    final Path morpherEngineTempFile =
                            Paths.get(tempFolder.toAbsolutePath().toString(), language.toString() + ".engine");
                    final boolean morpherEngineSerializationResult =
                            serializableMorpherEngine.serialize(morpherEngineTempFile);
                    if (!morpherEngineSerializationResult) {
                        return false;
                    }
                }
                else {
                    return false;
                }
            }

            Serializer.zipFolder(tempFolder, file);
            return true;
        }
        catch (final IOException e) {
            throw new IllegalStateException("Cannot serialize Morpher System", e);
        }
        finally {
            if (tempFolder != null) {
                Serializer.deleteFolder(tempFolder);
            }
        }
    }

    /**
     * Deserializes the state of this {@link MorpherSystem} from the given file.
     *
     * <p>If the method returns false, {@link Serializer} will try to deserialize the object with its own logic.</p>
     *
     * {@inheritDoc}
     */
    @Override
    public boolean deserialize(final Path file) {
        final boolean isEager = this.morpherEngineMap.values()
                .stream()
                .anyMatch(IMorpherEngine::isEager);

        if (isEager) {
            return false;
        }

        Path tempFolder = null;

        try {
            tempFolder = Files.createTempDirectory("morpher-system");
            Serializer.unzipFolder(file, tempFolder);

            final List<Path> morpherEngineFiles = Files.list(tempFolder)
                    .filter(Files::isRegularFile)
                    .collect(toList());

            for (final Path engineFile : morpherEngineFiles) {
                final Path engineFilename = engineFile.getFileName();
                if (engineFilename == null) {
                    return false;
                }
                final String engineFilenameString = engineFilename.toString();
                final String languageString = engineFilenameString.substring(0, engineFilenameString.length() - 7);
                final Language language = Language.of(languageString);
                final IMorpherEngine<?> morpherEngine = this.getMorpherEngine(language);
                if (morpherEngine instanceof ICustomDeserializer deserializableMorpherEngine) {
                    final boolean deserializationResult = deserializableMorpherEngine.deserialize(engineFile);
                    if (!deserializationResult) {
                        return false;
                    }
                }
                else {
                    return false;
                }
            }

            return true;
        }
        catch (final IOException e) {
            throw new IllegalStateException("Cannot serialize Morpher System", e);
        }
        finally {
            if (tempFolder != null) {
                Serializer.deleteFolder(tempFolder);
            }
        }
    }

    private IMorpherEngine<?> getMorpherEngine(final Language language) {
        final IMorpherEngine<?> morpherEngine = this.morpherEngineMap.get(language);

        if (morpherEngine == null) {
            throw new IllegalArgumentException("Language " + language + " is not present in this system");
        }

        return morpherEngine;
    }

}
